tests/invalid_run/div/div02.java
class Main {
	static void run() {
		if (a/(15*0) > 5) {}
	}
}
